--- a/templates/traefik/workloads/traefik-config/argocd_ingress_route.yml.j2
+++ b/templates/traefik/workloads/traefik-config/argocd_ingress_route.yml.j2
@@ -14,6 +14,9 @@ spec:
       services:
         - name: argocd-server
           port: 80
+      middlewares:
+        - name: compress
+          namespace: {{install.traefik.namespace}}
     - kind: Rule
       match: Host(`{{install.traefik.dashboard.ingress_name|default(ansible_fqdn)|lower}}`) && (PathPrefix(`{{install.argocd.dashboard.path}}`)) && Headers(`Content-Type`, `application/grpc`)
       priority: 11
