Added required double slash in GitHub path

--- a/templates/argocd/git_repo/renovate.json.j2
+++ b/templates/argocd/git_repo/renovate.json.j2
@@ -3,8 +3,8 @@
   "extends": [
     "config:base",
     ":semanticCommits",
-    "github>{{argocd_repo_url|default('UNDEFINED_REPO_URL') | urlsplit('path') | regex_replace('^\\/|\\/$, ''') }}/.github/renovate/labels.json5",
-    "github>{{argocd_repo_url|default('UNDEFINED_REPO_URL') | urlsplit('path') | regex_replace('^\\/|\\/$, ''') }}/.github/renovate/semanticCommits.json5"
+    "github>{{argocd_repo_url|default('UNDEFINED_REPO_URL') | urlsplit('path') | regex_replace('^\\/|\\/$, ''') }}//.github/renovate/labels.json5",
+    "github>{{argocd_repo_url|default('UNDEFINED_REPO_URL') | urlsplit('path') | regex_replace('^\\/|\\/$, ''') }}//.github/renovate/semanticCommits.json5"
   ],
   "argocd": {
     "fileMatch": ["applications/.+\\.yaml$", "workloads/.+\\.yaml$"]
