Enabled Renovate Dependancy Dashboard by Default

--- a/templates/argocd/git_repo/renovate.json.j2
+++ b/templates/argocd/git_repo/renovate.json.j2
@@ -3,6 +3,7 @@
   "extends": [
     "config:base",
     ":semanticCommits",
+    ":dependencyDashboard",
     "github>{{argocd_repo_url|default('UNDEFINED_REPO_URL') | urlsplit('path') | regex_replace('^\\/|\\/$, ''') }}//.github/renovate/labels.json5",
     "github>{{argocd_repo_url|default('UNDEFINED_REPO_URL') | urlsplit('path') | regex_replace('^\\/|\\/$, ''') }}//.github/renovate/semanticCommits.json5"
   ],
