Allow ignoreDiff for stateful set to scale to zero

--- a/templates/prometheus-op/applications/prometheus-op.yaml.j2
+++ b/templates/prometheus-op/applications/prometheus-op.yaml.j2
@@ -275,6 +275,13 @@ spec:
     server: https://kubernetes.default.svc
     namespace: {{install.prometheus_operator.namespace}}
 
+  # Allow changes to number of replicas (down to zero)
+  ignoreDifferences:
+    - group: apps
+      kind: StatefulSet
+      jsonPointers:
+        - /spec/replicas
+
   syncPolicy:
     automated:
       prune: true
