--- a/templates/prometheus-op/applications/prometheus-op.yaml.j2
+++ b/templates/prometheus-op/applications/prometheus-op.yaml.j2
@@ -36,6 +36,7 @@ spec:
           enabled: true
           namespace: kube-system
           serviceMonitor:
+            cAdvisor: true
             ## MetricRelabelConfigs to apply to samples after scraping, but before ingestion.
             ## ref: https://github.com/prometheus-operator/prometheus-operator/blob/main/Documentation/api.md#relabelconfig
             cAdvisorMetricRelabelings:
@@ -196,10 +197,22 @@ spec:
 {% if install.prometheus_operator.prometheus.dashboard.path is defined %}
             externalUrl: {{install.prometheus_operator.prometheus.dashboard.path}}
 {% endif %}
+            # Additional Scrape Jobs go inside this ConfigSecret if needed
             additionalScrapeConfigsSecret:
-              enabled: true
+              enabled: false
               name: additional-scrape-configs
               key: prometheus-additional-scrape-configs.yaml
+
+            additionalScrapeConfigs:
+{% if install.prometheus_operator.exporters.zfs_exporter.enabled|default(false)|bool == true%}
+              # ZFS Exporter Scrape Job
+              - job_name: "zfs-exporter"
+                static_configs:
+                  - targets:
+                    {% filter indent(width=10) %}{% for IP in controlPlaneIPs.stdout_lines[0] | split(' ') %}- "{{ IP | replace("'","") }}:{{ prometheus_op.zfs_exporter.port }}"
+{% endfor %}          {% if (workerNodeIPs.stdout_lines[0] is defined) and (workerNodeIPs.stdout_lines[0] | replace("'","")| length > 0) %}{% for IP in workerNodeIPs.stdout_lines[0] | split(' ') %}- "{{ IP | replace("'","") }}:{{ prometheus_op.zfs_exporter.port }}"
+{% endfor %}{% endif %}{% endfilter %}
+{{''}}{% endif %}
 
         # Graphana values
         # Reference: https://github.com/grafana/helm-charts/blob/main/charts/grafana/values.yaml
