--- a/templates/prometheus-op/workloads/secrets/prometheus-additional-scrape-configs_secret.yaml.j2
+++ b/templates/prometheus-op/workloads/secrets/prometheus-additional-scrape-configs_secret.yaml.j2
@@ -8,12 +8,4 @@ metadata:
   namespace: {{install.prometheus_operator.namespace}}
 stringData:
   prometheus-additional-scrape-configs.yaml: |
-{% if install.prometheus_operator.exporters.zfs_exporter.enabled|default(false)|bool == true%}
-    # ZFS Exporter Scrape Job
-    - job_name: "zfs-exporter"
-      static_configs:
-        - targets:
-          {% filter indent(width=10) %}{% for IP in controlPlaneIPs.stdout_lines[0] | split(' ') %}- "{{IP}}:{{prometheus_op.zfs_exporter.port}}"
-{% endfor %}{% if workerNodeIPs.stdout_lines[0] is defined %}{% for IP in workerNodeIPs.stdout_lines[0] | split(' ') %}- "{{IP}}:{{prometheus_op.zfs_exporter.port}}"
-{% endfor %}{% endif %}{% endfilter %}
-{{''}}{% endif %}
+    # Additional Scrape Jobs can be placed here if needed.
