--- a/templates/prometheus-op/applications/prometheus-op.yaml.j2
+++ b/templates/prometheus-op/applications/prometheus-op.yaml.j2
@@ -36,7 +36,7 @@ spec:
           enabled: true
           namespace: kube-system
           serviceMonitor:
-            cAdvisor: true
+            cAdvisor: false
             ## MetricRelabelConfigs to apply to samples after scraping, but before ingestion.
             ## ref: https://github.com/prometheus-operator/prometheus-operator/blob/main/Documentation/api.md#relabelconfig
             cAdvisorMetricRelabelings:
@@ -208,6 +208,52 @@ spec:
               key: prometheus-additional-scrape-configs.yaml
 
             additionalScrapeConfigs:
+              # CADVISOR SCRAPE JOB for externally installed cadvisor because of k8s with containerd problems
+              - job_name: "kubernetes-cadvisor"
+                kubernetes_sd_configs:
+                  - role: pod  # we get needed info from the pods
+                    namespaces:
+                      names: 
+                        - cadvisor
+                    selectors:
+                      - role: pod
+                        label: "app=cadvisor"  # and only select the cadvisor pods with this label set as source
+                metric_relabel_configs:  # we relabel some labels inside the scraped metrics
+                  # this should look at the scraped metric and replace/add the label inside
+                  - source_labels: [container_label_io_kubernetes_pod_namespace]
+                    target_label: "namespace"
+                  - source_labels: [container_label_io_kubernetes_pod_name]
+                    target_label: "pod"
+                  - source_labels: [container_label_io_kubernetes_container_name]
+                    target_label: "container"
+
+                  # These are also applied to native kublet cadvisor to drop uesless metrics by Kube-Prometheus-Stack
+                  # Drop less useful container CPU metrics.
+                  - source_labels: [__name__]
+                    action: drop
+                    regex: 'container_cpu_(cfs_throttled_seconds_total|load_average_10s|system_seconds_total|user_seconds_total)'
+                  # Drop less useful container / always zero filesystem metrics.
+                  - source_labels: [__name__]
+                    action: drop
+                    regex: 'container_fs_(io_current|io_time_seconds_total|io_time_weighted_seconds_total|reads_merged_total|sector_reads_total|sector_writes_total|writes_merged_total)'
+                  # Drop less useful / always zero container memory metrics.
+                  - source_labels: [__name__]
+                    action: drop
+                    regex: 'container_memory_(mapped_file|swap)'
+                  # Drop less useful container process metrics.
+                  - source_labels: [__name__]
+                    action: drop
+                    regex: 'container_(file_descriptors|tasks_state|threads_max)'
+                  # Drop container spec metrics that overlap with kube-state-metrics.
+                  - source_labels: [__name__]
+                    action: drop
+                    regex: 'container_spec.*'
+
+                  # Change instance IP to node name
+                  - action: replace
+                    source_labels: [node]
+                    target_label: "instance"
+
 {% if install.prometheus_operator.exporters.zfs_exporter.enabled|default(false)|bool == true%}
               # ZFS Exporter Scrape Job
               - job_name: "zfs-exporter"
